# pico_switch

./: README.md  github
1.3TFT/51测试/STC_SoftSPI_CNCode(模拟SPI中文显示)/: Mode.uvgui.evk  Mode.uvgui.hp  Mode.uvopt  Mode.uvproj  font.h
1.3TFT/51测试/STC_SoftSPI_CNCode(模拟SPI中文显示)/Out Hex/: SPI  SPI.build_log.htm  SPI.hex  spi.plg
1.3TFT/51测试/STC_SoftSPI_CNCode(模拟SPI中文显示)/Program/: 282838p.c
1.3TFT/arduino测试/Arduino-ST7789-Library-master/examples/graphicstest/: graphicstest.ino
1.3TFT/stm32测试/STM32F103C8程序/HARDWARE/OLED/: bmp.h  oled.c  oled.h  oledfont.h
1.3TFT/stm32测试/STM32F103C8程序/USER/: JLinkLog.txt  OLED.map  OLED.uvoptx  OLED.uvprojx  OLED_Target 1.dep  main.c  startup_stm32f10x_hd.lst
pico-sdk/: cscope.files  cscope.in.out
pico-sdk/lib/tinyusb/examples/device/: CMakeLists.txt
pico-sdk/lib/tinyusb/examples/device/hid_composite/: CMakeLists.txt
pico-sdk/lib/tinyusb/examples/device/hid_composite/src/: .main.c.swp  core1.c  core1.h  lcd.c  lcd.h  lcdfont.h  lv_conf.h  main.c  usb_descriptors.c  usb_descriptors.h
pico-sdk/lib/tinyusb/examples/device/hid_composite/src/img/: github.h  lcdfont.h  nga.h  ns.h  rgb.h
pico-sdk/lib/tinyusb/hw/bsp/rp2040/: family.cmake
pico-sdk/src/rp2_common/hardware_spi/: spi.c
